--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,25 +1,3 @@
-# version: '3'
-# services:
-#   nodejs:
-#     image: nodejs-app
-#     build: ./
-#     ports:
-#      - "8080:3000"
-#     environment:
-#       - DATABASE_HOST=db
-#       - MYSQL_ROOT_PASSWORD=123
-#     env_file:
-#     - ./.env
-#     depends_on:
-#      - db
-#   db:
-#     image: mydb-app
-#     build: ./db
-#     environment:
-#       - DATABASE_HOST=db
-#       - MYSQL_ROOT_PASSWORD=123
-#     ports:
-#       - '3306:3306'
 version: '3'
 
 services:
@@ -30,13 +8,8 @@ services:
     image: nodejs-app
     container_name: nodejs-app
     restart: unless-stopped
-    env_file: .env
-    environment:
-      - DATABASE_HOST=db
-      - MYSQL_ROOT_PASSWORD=123
     depends_on:
      - db
-
     ports:
       - "8080:3000"
     volumes:
@@ -50,10 +23,12 @@ services:
     image: mydb-app
     container_name: db
     restart: unless-stopped
-    env_file: .env
     environment:
       - DATABASE_HOST=db
       - MYSQL_ROOT_PASSWORD=123
+      - MYSQL_PASSWORD= 123
+    volumes:
+      - db_data:/var/lib/mysql
     networks:
       - app-network  
 
@@ -62,4 +37,5 @@ networks:
     driver: bridge
 
 volumes:
+  db_data:
   node_modules:
